[tool.poetry]

name = "gregros"
version = "0.1.0"
description = "My GitHub README."
authors = ["GregRos <gregros@gregros.dev>"]
[tool.poetry.dependencies]
python = "^3.13"
jinja2 = "^3.1.6"
[tool.poetry.scripts]
main = "gregros.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
